testing/tests/ui/name_mismatch_endblock.stderr
error: expected name `foo` in `endblock` tag, found `not_foo`
 --> <source attribute>:1:27
       "not_foo %}"
 --> tests/ui/name_mismatch_endblock.rs:4:21
  |
4 | #[template(source = "{% block foo %}{% endblock not_foo %}", ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
